--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <a class="post-image-link" href="hello-world-welcome-to-my-blog/index.html">
                 <img class="post-image lazyload u-object-fit"
 
-                    data-srcset="/content/images/size/w400/2022/06/Portacoronas-23-15.jpg 400w, /content/images/size/w750/2022/06/Portacoronas-23-15.jpg 750w, /content/images/size/w960/2022/06/Portacoronas-23-15.jpg 960w, /content/images/size/w1140/2022/06/Portacoronas-23-15.jpg 1140w, /content/images/size/w1920/2022/06/Portacoronas-23-15.jpg 1920w"
+                    data-srcset="/content/images/size/w960/2022/06/Portacoronas-23-15.jpg 960w"
                     data-sizes="auto" src="content/images/size/w960/2022/06/Portacoronas-23-15.jpg"
                     srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                      alt="Hello world! Welcome to my blog">
