Changes in file structure

--- a/about/index.html
+++ b/about/index.html
@@ -75,6 +75,12 @@ I&#x27;m Luis and I like making things, mostly for the sake of learning, but als
     "author": {
         "@type": "Person",
         "name": "Luis Medina",
+        "image": {
+            "@type": "ImageObject",
+            "url": "http://localhost:2368/content/images/2022/07/IMG_20210703_160904-1.jpg",
+            "width": 1475,
+            "height": 1474
+        },
         "url": "http://localhost:2368/author/luis/",
         "sameAs": []
     },
