--- a/hello-world-welcome-to-my-blog/index.html
+++ b/hello-world-welcome-to-my-blog/index.html
@@ -69,6 +69,12 @@
     "author": {
         "@type": "Person",
         "name": "Luis Medina",
+        "image": {
+            "@type": "ImageObject",
+            "url": "http://localhost:2368/content/images/2022/07/IMG_20210703_160904-1.jpg",
+            "width": 1475,
+            "height": 1474
+        },
         "url": "http://localhost:2368/author/luis/",
         "sameAs": []
     },
@@ -258,8 +264,8 @@
 </div>                            <section class="author">
         <div class="author-image-placeholder u-placeholder">
             <img class="author-image lazyload u-object-fit"
-                data-srcset=""
-                src="index.html"
+                data-srcset="/content/images/size/w150/2022/07/IMG_20210703_160904-1.jpg"
+                src="../content/images/size/w150/2022/07/IMG_20210703_160904-1.jpg"
                 srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                 alt="Luis Medina">
         </div>
