included analytics tools

--- a/about/index.html
+++ b/about/index.html
@@ -162,7 +162,16 @@ I&#x27;m Luis and I like making things, mostly for the sake of learning, but als
 
 .gh-post-upgrade-cta a.gh-btn:hover {
     opacity: 0.92;
-}</style><style>:root {--ghost-accent-color: #19809a;}</style>
+}</style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-19WE4C8R4F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-19WE4C8R4F');
+</script><style>:root {--ghost-accent-color: #19809a;}</style>
 </head>
 
 <body class="page-template page-about tag-blog tag-maker tag-plans tag-engineer tag-designer has-serif-title">
