--- a/hello-world-welcome-to-my-blog/index.html
+++ b/hello-world-welcome-to-my-blog/index.html
@@ -162,7 +162,16 @@
 
 .gh-post-upgrade-cta a.gh-btn:hover {
     opacity: 0.92;
-}</style><style>:root {--ghost-accent-color: #19809a;}</style>
+}</style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-19WE4C8R4F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-19WE4C8R4F');
+</script><style>:root {--ghost-accent-color: #19809a;}</style>
 </head>
 
 <body class="post-template tag-maker tag-plans tag-organization tag-cad tag-electronics tag-esp32 tag-3dprinting tag-python has-serif-title">
