Edited MATLAB statistics - changes on About section

--- a/replacing-matlab-with-python-part-1/index.html
+++ b/replacing-matlab-with-python-part-1/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Replacing MATLAB with Python - Part 1</title>
-    <link rel="stylesheet" href="../assets/built/screen.css@v=19b356a8f2.css">
+    <link rel="stylesheet" href="../assets/built/screen.css@v=6613460358.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400;1,700&family=Mulish:ital,wght@0,400;0,700;0,800;1,400;1,700&display=swap">
@@ -310,6 +310,11 @@
             </a>
         </div>
 
+        <div class="navigation-item navigation-next">
+            <a class="navigation-item-link button-arrow button-arrow-right" href="../using-matlab-and-statistics-to-analyze-raw-vehicle-data/index.html">
+                Next Post <i class="button-arrow-icon icon icon-arrow-right"></i>
+            </a>
+        </div>
 </div>                        <section class="related-posts container medium">
             <h3 class="related-title"><span class="text">You might also like...</span></h3>
             <div class="row">
@@ -401,7 +406,7 @@
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous">
     </script>
-    <script src="../assets/built/main.min.js@v=19b356a8f2"></script>
+    <script src="../assets/built/main.min.js@v=6613460358"></script>
 
     
 
