Edited post about Replacing MATLAB part 2. Added cononical hrefs

--- a/that-s-it-i-am-getting-a-more-reliable-3d-printer/index.html
+++ b/that-s-it-i-am-getting-a-more-reliable-3d-printer/index.html
@@ -17,7 +17,7 @@
     </script>
 
     <meta name="description" content="Let me tell you about my journey with a cheap 3D printer. It was a ton of fun, and I learned many useful things. Maybe you can learn from my errors too!" />
-    <link rel="canonical" href="index.html" />
+    <link rel="canonical" href="https://makerluis.com/that-s-it-i-am-getting-a-more-reliable-3d-printer/index.html" />
     <meta name="referrer" content="no-referrer-when-downgrade" />
     
     <meta property="og:site_name" content="Making stuff after office hours" />
