Edited post about Replacing MATLAB part 2. Added cononical hrefs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </script>
 
     <meta name="description" content="Making stuff after office hours" />
-    <link rel="canonical" href="https://makerluis.com/index.html" />
+    <link rel="canonical" href="index.html" />
     <meta name="referrer" content="no-referrer-when-downgrade" />
     
     <meta property="og:site_name" content="Making stuff after office hours" />
