Edited post about Replacing MATLAB part 2. Added cononical hrefs

--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
     </script>
 
     <meta name="description" content="Making stuff after office hours" />
-    <link rel="canonical" href="index.html" />
+    <link rel="canonical" href="https://makerluis.com/index.html" />
     <meta name="referrer" content="no-referrer-when-downgrade" />
     
     <meta property="og:site_name" content="Making stuff after office hours" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Making stuff after office hours" />
     <meta property="og:description" content="Making stuff after office hours" />
-    <meta property="og:url" content="http://localhost:2368/" />
+    <meta property="og:url" content="https://makerluis.com/" />
     <meta property="og:image" content="https://static.ghost.org/v4.0.0/images/publication-cover.jpg" />
     <meta property="article:publisher" content="https://www.facebook.com/ghost" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Making stuff after office hours" />
     <meta name="twitter:description" content="Making stuff after office hours" />
-    <meta name="twitter:url" content="http://localhost:2368/" />
+    <meta name="twitter:url" content="https://makerluis.com/" />
     <meta name="twitter:image" content="https://static.ghost.org/v4.0.0/images/publication-cover.jpg" />
     <meta name="twitter:site" content="@ghost" />
     <meta property="og:image:width" content="7183" />
