--- a/what-people-like-to-3d-print/index.html
+++ b/what-people-like-to-3d-print/index.html
@@ -235,8 +235,8 @@
             <a class="post-image-link" href="index.html">
                 <img class="post-image lazyload u-object-fit"
 
-                    data-srcset="/content/images/size/w400/2022/11/http://localhost:2368/content/images/2022/11/IMG_1462.jpg 400w, /content/images/size/w750/2022/11/http://localhost:2368/content/images/2022/11/IMG_1462.jpg 750w, /content/images/size/w960/2022/11/http://localhost:2368/content/images/2022/11/IMG_1462.jpg 960w, /content/images/size/w1140/2022/11/http://localhost:2368/content/images/2022/11/IMG_1462.jpg 1140w, /content/images/size/w1920/2022/11/http://localhost:2368/content/images/2022/11/IMG_1462.jpg 1920w"
-                    data-sizes="auto" src="../content/images/size/w960/2022/11/http://localhost:2368/content/images/2022/11/IMG_1462.jpg"
+                    data-srcset="/content/images/size/w400/2022/11/IMG_1462.jpg 400w, /content/images/size/w750/2022/11/IMG_1462.jpg 750w, /content/images/size/w960/2022/11/IMG_1462.jpg 960w, /content/images/size/w1140/2022/11/IMG_1462.jpg 1140w, /content/images/size/w1920/2022/11/IMG_1462.jpg 1920w"
+                    data-sizes="auto" src="../content/images/size/w960/2022/11/IMG_1462.jpg"
                     srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                      alt="What do people like to 3D print?">
             </a>
